# protolizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: index.md
examples/: context_fields.py  custom_response.py  nested_fields.py  pre_serialize_hook.py  validate_hook.py
protolizer/: __init__.py  exceptions.py  fields.py  helpers.py  meta.py  serializer.py  utils.py
tests/: test_custom_response.py  test_fields.py  test_json_to_protobuf.py  test_nested_fields.py  test_pre_serialize_hook.py  test_protobuf_to_json.py  test_validation.py
tests/config/generated_proto/: protobuf_pb2.py  protobuf_pb2_grpc.py
tests/config/proto/: protobuf.proto
