[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protolizer"
version = "1.2.0"
description = "A simple library to serialize and deserialize protobuf messages"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MosyDev", email = "mostafa.uwsgi@gmail.com" }
]
keywords = ["protobuf", "serialization", "deserialization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "protobuf>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/its0x4d/protolizer"
Repository = "https://github.com/its0x4d/protolizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["protolizer*"]
